tenzir/integration/data/reference/pipelines_local/test_legacy_operator/step_00.ref
error: expected additional positional argument `<string>`
 --> <input>:1:1
  |
1 | legacy
  | ^^^^^^ 
  |
  = usage: legacy <string>
  = docs: https://docs.tenzir.com/operators/legacy